--- a/homeassistant-version-control/config.json
+++ b/homeassistant-version-control/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Home Assistant Version Control Beta",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "slug": "home-assistant-version-control-beta",
   "description": "Git-powered version control and automated backup for your Home Assistant configuration files",
   "url": "https://github.com/diggingfordinos/HomeAssistantVersionControlBeta",
@@ -31,8 +31,14 @@
   "environment": {
     "CONFIG_PATH": "/config"
   },
-  "options": {},
-  "schema": {},
+  "options": {
+    "additional_extensions": []
+  },
+  "schema": {
+    "additional_extensions": [
+      "str"
+    ]
+  },
   "healthcheck": {
     "test": [
       "CMD",
