Include and exclude in the addon configuration

--- a/homeassistant-version-control/config.json
+++ b/homeassistant-version-control/config.json
@@ -32,10 +32,19 @@
     "CONFIG_PATH": "/config"
   },
   "options": {
-    "additional_extensions": []
+    "include_extensions": [
+      "yaml",
+      "yml"
+    ],
+    "exclude_files": [
+      "secrets.yaml"
+    ]
   },
   "schema": {
-    "additional_extensions": [
+    "include_extensions": [
+      "str"
+    ],
+    "exclude_files": [
       "str"
     ]
   },
